crates/lang/macro/tests/ui/contract/fail/constructor-self-receiver-04.stderr
error: ink! constructors must have no `self` receiver
  --> $DIR/constructor-self-receiver-04.rs:10:28
   |
10 |         pub fn constructor(self) -> Self {
   |                            ^^^^
